# ncbi-datasets-mcp-server

./: .gitignore  CHANGELOG.md  README.md  build_mcpb.py  installer.py  manifest.json  pyproject.toml  server.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  update-enums.yml
docs/superpowers/plans/: 2026-06-10-list-data-types.md
docs/superpowers/specs/: 2026-06-10-list-data-types-design.md
scripts/: gen_enums.py
src/ncbi_datasets_mcp/: __init__.py  config.py  server.py
src/ncbi_datasets_mcp/cli/: installer.py  locator.py  runner.py
src/ncbi_datasets_mcp/domains/: _generated_enums.py  catalog.py  common.py  genome.py  taxonomy.py
src/ncbi_datasets_mcp/models/: responses.py
src/ncbi_datasets_mcp/rest/: client.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_build_mcpb.py  test_cli_installer.py  test_cli_locator.py  test_cli_runner.py  test_domains_catalog.py  test_domains_genome.py  test_domains_taxonomy.py  test_rest_client.py
