[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncbi-datasets-mcp"
version = "0.1.0"
description = "MCP server for NCBI Datasets — search metadata and download genomic data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mcp", "ncbi", "bioinformatics", "genomics", "datasets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "pyyaml>=6.0",      # used by scripts/gen_enums.py
]

[project.scripts]
ncbi-datasets-mcp = "ncbi_datasets_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ncbi_datasets_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live network access (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
